--- a/views/index.html
+++ b/views/index.html
@@ -31,8 +31,8 @@
         <h3>Example Usage:</h3>
         <ul>
           <li>
-            <code>GET [project url]/api/timestamp/2015-12-25</code></li>
-          <li><code>GET project url]/api/timestamp/1450137600</code></li>
+            <code>GET <a href="https://bubbly-glazer.glitch.me/api/timestamp/2015-12-25" />https://bubbly-glazer.glitch.me/api/timestamp/2015-12-25</code></li>
+          <li><code>GET <a href="https://bubbly-glazer.glitch.me/api/timestamp/1450137600" />https://bubbly-glazer.glitch.me/api/timestamp/1450137600</code></li>
         </ul>
 
         <h3>Example Output:</h3>
